--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,16 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Elias Tianchong Huang
     - name: Languages
-      value: English, German
+      value: English, German, Mandrin, Cantonese, Sqanish
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Bachelor of Arts in Econmics
+      institution: University of St. Gallen, Switzerland
+      year: 2019-2024
       description:
         - Description 1.
         - Description 2.
@@ -21,9 +19,9 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: Additional Dimplom in Data Science
+      institution: University of St. Gallen, Switzerland
+      year: 2020-2021
       description:
         - Description 1.
         - Description 2.
@@ -31,9 +29,9 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Assistant
+      institution: Institute for Empirical Economic Research, St. Gallen, Switzerland
+      year: 2021 - present
       description:
         - Description 1.
         - Description 2.
@@ -41,25 +39,23 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+            
+    - title: FX Trader
+      institution: Double Safeguard Asset Management
+      year: 2023
+      
+    - title: Quantitative Researcher Intern
+      institution: Kaiyuan Securities, Shanghai, China
+      year: 2021
       description:
         - Description 1.
         - Description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Audit Intern
+      institution: KPMG China, Guangzhou, China
+      year: 2019
       description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
 
 - title: Open Source Projects
   type: time_table
@@ -82,11 +78,11 @@
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Monetary Economics.
       items:
         - Description 1.
         - Description 2.
-    - title: Topic 2.
+    - title: Macroeconomics.
       items:
         - Description 1.
         - Description 2.
@@ -94,4 +90,4 @@
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Badminton, Volleyball, Swimming, Hiking
